# test-rust-tracing

./: Cargo.toml
src/: main.rs
