[package]
name = "test-tracing"
version = "0.1.0"
authors = ["Nicolas Moutschen <nicolas.moutschen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.15"
tracing-subscriber = { version = "0.2", features = ["json"] }